# hevc_libde265_player

./: CMakeLists.txt
BirdDogApp/: CMakeLists.txt
media/: foo2.265  httpftp.kw.bbc.co.ukhevchm-10.0-anchorsbitstreamsi_main.txt  ndi.265
